feat: Adding button, alert , badge
Adding component library items for
button
alert
Badge

*Adding fontawsome for icons

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @import "/components/avatar/avatar.css";
+@import "/components/alert/alert.css";
+@import "/components/button/button.css";
+@import "/components/badge/badge.css";
 @import "/components/common.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
