--- a/components/avatar/avatar.css
+++ b/components/avatar/avatar.css
@@ -2,6 +2,10 @@
     object-fit: cover;
 }
 
+.avatar-item-container{
+    display: flex;
+    align-items:baseline
+}
 .av-xxl{
     width: 12rem;
     height: auto;
