--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import "/components/button/button.css";
 @import "/components/badge/badge.css";
 @import "/components/common.css";
+@import "/components/cards/cards.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
 *{
