--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 @import "/components/badge/badge.css";
 @import "/components/common.css";
 @import "/components/cards/cards.css";
+@import "/components/image/image.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
 *{
