--- a/components/common.css
+++ b/components/common.css
@@ -21,6 +21,8 @@
     --ALERT-SUCCESS-TEXT:#006d00;
     --ALERT-SUCCESS-BACKGROUND:#e6ffdc;
     --ALERT-WARNING-TEXT:#a37a00;
+    --ALERT-WARNING-BORDER:#a37a00;
+    --ERROR-WARNING-BORDER:#800000;
     --ALERT-WARNING-BACKGROUND:#fff3cd;
     --ALERT-ERROR-TEXT:#664d03;
     --ALERT-ERROR-BACKGROUND:#ffe3e3;
