--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import "/components/common.css";
 @import "/components/cards/cards.css";
 @import "/components/image/image.css";
+@import "/components/input/input.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
 *{
