feat: adding modal
adding modal

--- a/components/common.css
+++ b/components/common.css
@@ -32,4 +32,8 @@
     --BUTTON-TEXT:#ffffff;
     --BUTTON-BACKGROUND-SECONDARY:#9CA3AF;
     --BUTTON-TEXT-SECONDARY:#ffffff;
+    --BACKDROP:GREY;
+    --MODAL-COLOR:#fff;
+    --MODAL-BORDER-COLOR:#004085;
+    --MODAL-BORDER-OUTLINE: #cbd5e1;
 }
