--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 @import "/components/image/image.css";
 @import "/components/input/input.css";
 @import "/components/modal/modal.css";
+@import "/components/snackbar/snackbar.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
 *{
