feat: adding ordered and stacked list items

--- a/components/common.css
+++ b/components/common.css
@@ -36,4 +36,6 @@
     --MODAL-COLOR:#fff;
     --MODAL-BORDER-COLOR:#004085;
     --MODAL-BORDER-OUTLINE: #cbd5e1;
+    --STACKED-BORDER-OUTLINE:#004085;
+    --STACKED-BORDER-BACKGROUND:#c1c7d0
 }
