--- a/components/avatar/avatar.css
+++ b/components/avatar/avatar.css
@@ -1,24 +1,30 @@
-.avatar{
-    object-fit: cover;
+.avatar {
+  object-fit: cover;
 }
 
-.avatar-item-container{
-    display: flex;
-    align-items:baseline
+.avatar-item-container {
+  display: flex;
+  align-items: baseline;
 }
-.av-xxl{
-    width: 12rem;
-    height: auto;
+.av-xxl {
+  width: 12rem;
+  height: auto;
 }
-.av-xl{
-    width: 10rem;
-    height: auto;
+.av-xl {
+  width: 10rem;
+  height: auto;
 }
-.av-lg{
-    width: 8rem;
-    height: auto;
+.av-lg {
+  width: 8rem;
+  height: auto;
 }
-.av-sm{
-    width: 6rem;
-    height: auto;
+.av-sm {
+  width: 6rem;
+  height: auto;
+}
+
+.avatar-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
