--- a/components/common.css
+++ b/components/common.css
@@ -39,3 +39,9 @@
     --STACKED-BORDER-OUTLINE:#004085;
     --STACKED-BORDER-BACKGROUND:#c1c7d0
 }
+
+.install-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
